--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: butterfly
+theme: Mic_Theme
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
@@ -108,4 +108,3 @@ deploy:
   type: git
   repository: https://github.com/ChutianDuan/ChutianDuan.github.io.git
   branch: main
-
